# example

./: .gitignore  CMakeLists.txt  README.MD  index.html  serve.sh
.github/workflows/: cmake-multi-platform.yml
include/my_pendulum/: my_pendulum.h  operations_cpu.h  operations_generic.h
src/: main.cpp
